[package]
name = "generate"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
openapi-client-generator = { git = "https://github.com/libninjacom/openapi-client-generator" }

[patch."https://github.com/libninjacom/openapi-client-generator"]
openapi-client-generator = { path = "/Users/kurt/work/openapi-client-generator" }